Remove methods deprecated in more recent JDKs